be-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-srv
  annotations:
    cloud.google.com/app-protocols: '{"be":"HTTP"}'
  labels:
    type: be-srv
spec:
  type: ClusterIP 
  ports:
  - name: be
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    type: be
