my-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-srv
  annotations:
    cloud.google.com/app-protocols: '{"fe":"HTTP"}'
    cloud.google.com/neg: '{"ingress": true, "exposed_ports": {"8080":{}}}'
  labels:
    type: myapp-srv
spec:
  type: ClusterIP 
  ports:
  - name: fe
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    type: myapp
